att- swagger